# karis-programming-language

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  dev  dev.toml  math.kr  sample.kr
.github/workflows/: ci.yml  nightly_lints.yml  quickstart.yml
compiler/: Cargo.toml
compiler/src/: compile.rs  compiler_impls.rs  defs.rs  lib.rs  objects.rs  vm.rs  vm_executor.rs
console/: Cargo.toml
console/src/: main.rs
errors/: Cargo.toml
errors/src/: errors.rs
evaluator/: Cargo.toml
evaluator/src/: evaluate.rs  lib.rs
lexer/: Cargo.toml  refs.md
lexer/src/: errors.rs  lexer.rs  lib.rs  tokens.rs
parser/: Cargo.toml  doc.md
parser/_x/: _nodes_edges.py
parser/python/: app.py
parser/src/: binary_expression.rs  declarations.rs  identifier_declaration.rs  inspector.rs  lib.rs  literal_declaration.rs  objects.rs  parser.rs  program_declaration.rs  registry.rs  registry_helpers.rs  registry_led.rs  registry_nud.rs  retriever.rs  variable_declaration.rs  variable_declarator.rs
testdata/: test0.kr  test1.kr
testdata/00/: test00.kr  test01.kr  test02.kr  test03.kr
testdata/01/: complete.kr  test01.kr  test02.kr  test04.kr  test05.kr  test1.kr  test2.kr  test3.kr
