[package]
name = "compiler"
version = "0.1.0"
edition = "2021"
authors = ["Mwangi Kariuki <dmwangi@kineticengines.co.ke>"]
repository = "https://github.com/daviddexter/karis-programming-language/compiler"



[dependencies]
bincode = "1.3.3"
errors = { path = "../errors" }
parser = { path = "../parser" }
lexer = { path = "../lexer" }
serde = { version = "1.0.140", features = ["serde_derive"] }
borsh = "0.10.3"
either = "1.6.1"
hashbrown = "0.12.3"
enum-as-inner = "0.5.1"
byteorder = "1.4.3"
