[package]
name = "console"
version = "0.1.0"
edition = "2021"
authors = ["Mwangi Kariuki <dmwangi@kineticengines.co.ke>"]
repository = "https://github.com/daviddexter/karis-programming-language/console"


[dependencies]
clap = { version = "3.2.12", features = ["cargo"] }
lexer = { path = "../lexer" }
parser = { path = "../parser" }

