[package]
name = "console"
version = "0.1.0"
edition = "2021"
authors = ["Mwangi Kariuki <dmwangi@kineticengines.co.ke>"]
repository = "https://github.com/daviddexter/karis-programming-language/console"

[[bin]]
name = "karis"
path = "src/main.rs"


[dependencies]
clap = { version = "3.2.12", features = ["cargo"] }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
errors = { path = "../errors" }
evaluator = { path = "../evaluator" }
hashbrown = "0.12.3"
rustyline = { version = "10.0.0", features = ["custom-bindings"] }
colored = "2.0.0"
rustyline-derive = "0.7.0"
env_logger = "0.10.0"
