[package]
name = "evaluator"
version = "0.1.0"
edition = "2021"
authors = ["Mwangi Kariuki <dmwangi@kineticengines.co.ke>"]
repository = "https://github.com/daviddexter/karis-programming-language/evaluator"


[dependencies]
colored = "2.0.0"
either = "1.8.0"
enum-as-inner = "0.5.0"
errors = { path = "../errors" }
hashbrown = "0.12.3"
lexer = { path = "../lexer" }
log = "0.4.17"
parser = { path = "../parser" }
