[package]
name = "lexer"
version = "0.1.0"
edition = "2021"
authors = ["Mwangi Kariuki <dmwangi@kineticengines.co.ke>"]
rust-version = "1.56.0"
repository = "https://github.com/daviddexter/wanja-programming-language/lexer/"


[dependencies]
errors = { path = "../errors" }
serde = { version = "1.0.140", features = ["serde_derive"] }

