[package]
name = "lexer"
version = "0.1.0"
edition = "2021"
authors = ["Mwangi Kariuki <dmwangi@kineticengines.co.ke>"]
repository = "https://github.com/daviddexter/karis-programming-language/lexer"


[dependencies]
errors = { path = "../errors" }
serde = { version = "1.0.140", features = ["serde_derive"] }

