[package]
name = "parser"
version = "0.1.0"
edition = "2021"
authors = ["Mwangi Kariuki <dmwangi@kineticengines.co.ke>"]
rust-version = "1.56.0"
repository = "https://github.com/daviddexter/wanja-programming-language/parser/"


[dependencies]
lexer = { path = "../lexer" }
errors = { path = "../errors" }
enum-as-inner = "0.5.0"
itertools = "0.10.3"
