[package]
name = "parser"
version = "0.1.0"
edition = "2021"
authors = ["Mwangi Kariuki <dmwangi@kineticengines.co.ke>"]
repository = "https://github.com/daviddexter/karis-programming-language/parser"

[dependencies]
lexer = { path = "../lexer" }
errors = { path = "../errors" }
enum-as-inner = "0.5.0"
itertools = "0.10.3"
anyhow = "1.0.57"
hashbrown = "0.12.1"
either = "1.6.1"
random-string = "1.0.0"
pyo3 = { version = "0.16.5", features = ["auto-initialize"] }
serde = { version = "1.0.140", features = ["serde_derive"] }
serde_json = "1.0.82"
bincode = "1.3.3"
blake3 = "1.3.1"
debug_print = "1.0.0"
